# graft-ng

./: .gitignore  CMakeConfig.h.in  CMakeLists.txt  README.md
data/: config.ini
graftlets/: CMakeLists.txt  CMakePluginConfig.h.in  TestGraftlet.cpp  TestGraftlet1.cpp  plugin.cpp
graftlets/common/: CMakeGraftletConfig.h.in  graftlet.h
graftlets/my_graftlet/: CMakeLists.txt  plugin.cpp
include/: GraftletLoader.h  IGraftlet.h  backtrace.h  connection.h  context.h  graft_constants.h  graft_manager.h  graft_utility.hpp  server.h  state_machine.h  task.h  timer.h
src/: backtrace.c  connection.cpp  graft_manager.cpp  main.cpp  server.cpp  task.cpp
test/: cryptonode_handlers_test.cpp  graft_server_test.cpp  graftlets_test.cpp  json_rpc_test.cpp  main.cpp  test.h
